Release 3 (2012-??)
===================

Documentation
-------------

 - Added a fallback to local jQuery UI library if the CDN fails
 - Added the undum namespace to examples where it was missing
 - Removed the rather weak "resources" section from the Undum introduction
 - Added a link to Starborn
 - Added links to example stories' source codes
 - Added a section about link popups to the documentation and the API


Release 2 (2012-02-04)
======================

Documentation
-------------

 - Fixed the documentation for preloading multiple images.
 - Added a note about playing sounds in iOS devices.
 

Examples
--------

 - Down the Rabbit-Hole now preloads the images it uses.


Libraries
---------

 - Updated jQuery to 1.7.1.
 

Modules
-------

 - Buttons: rewrote the button system.
 - Core: added Crockford's inheritance method.
 - Core: passing the Undum engine to the initializer is now mandatory. 
 - Core: added a function for "clicking" links.
 - HTML: link() accepts the link building parameters as a single object.
 - HTML: link() can create multiple choice popups.
 - HTML: url() now recognizes that filenames starting with ./ or ../ should
   not have the default directory prepended to them. 
 - Media: added isMuted().
 - Tooltip: removed a stray uninitialized variable that caused problems 
   in some browsers.
 
 
Releases
--------

 - Added the media/music directory to theme packages.
 
 
 
Release 1.1 (2011-11-20)
========================

Initial release.